# Customize_OCR

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  conanfile.txt  project_init.py
doc/mind_map/: relation_map.xmind
include/: ocr_rec.h
lib/Config/Files_Path/: Files_Path.cpp  Files_Path.h
lib/Config/Global_Config/: Global_Config.cpp  Global_Config.h
lib/OCR/: CMakeLists.txt  ImageOCR.cpp  ImageOCR.h
lib/Utility/Files_Manager/: Files_Manager.cpp  Files_Manager.h
lib/Utility/ImageFormat/: ImageFormat.cpp  ImageFormat.h
lib/Utility/Qt_CV/: Qt_CV.cpp  Qt_CV.h
libraries/APP_Setting/: APP_Setting.cpp  APP_Setting.h
libraries/Config/Files_Path/: Files_Path.cpp  Files_Path.h
libraries/Config/Global_Config/: Global_Config.cpp  Global_Config.h
libraries/Config/Widget_Config/: Widget_Config.cpp  Widget_Config.h
libraries/ExcelWrite/: CMakeLists.txt  ExcelWrite.cpp  ExcelWrite.h
libraries/ExcelWrite/testing/: main.cpp
libraries/ImageUtility/: ImageUtility.cpp  ImageUtility.h
libraries/OCR/: ImageOCR.cpp  ImageOCR.h
libraries/OCR_Image/: OCR_Image.cpp  OCR_Image.h
libraries/Utility/Files_Manager/: Files_Manager.cpp  Files_Manager.h
libraries/Utility/ImageFormat/: ImageFormat.cpp  ImageFormat.h
libraries/XlntControl/: XlntControl.cpp  XlntControl.h
libs/Config/Files_Path/: Files_Path.cpp
libs/Config/Global_Config/: Global_Config.h
src/: main.cpp  ocr_det.cpp  ocr_rec.cpp  utility.cpp
src/struct/OCR_Data/: OCR_Data.cpp  OCR_Data.h  OCR_Data_ListWidget.cpp  OCR_Data_ListWidget.h  ocr_widget_item.ui
src/widget/image_view_widget/: image_view_widget.cpp  image_view_widget.h
src/widget/main_window/: main_window.cpp  main_window.h  main_window.ui
src/widget/main_window/strcut/: action_enum.h
src/widget/mainwinodw/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/widget/ocr_detect_widget/: ocr_detect_widget.cpp  ocr_detect_widget.h  ocr_detect_widget.ui
src/widget/ocr_detect_widget/data_struct/: ocr_data_struct.cpp  ocr_data_struct.h
src/widget/ocr_detect_widget/widget_item/: ocr_data_widget.cpp  ocr_data_widget.h  ocr_data_widget.ui
src/widget/ocr_format_create_widget/: ocr_format_create_widget.cpp  ocr_format_create_widget.h  ocr_format_create_widget.ui
src/widget/ocr_format_create_widget/data_struct/: ocr_format_struct.cpp  ocr_format_struct.h
utils/dict/: chinese_cht_dict.txt
